--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ addopts = [
     "--disable-warnings",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
@@ -71,4 +71,7 @@ lint = [
     "black",
     "isort",
     "mypy",
+]
+build = [
+    "twine",
 ]
